# citybike_wien_aggregation

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml
src/: main.py
src/aggregators/: stations.py
src/apis/: nearby_address.py  stations.py
tests/integration/: conftest.py  test_nearby_address_api.py  test_stations_aggregator.py  test_stations_api.py
