[tool.poetry]
name = "citybike_wien_aggregation"
version = "0.1.0"
description = "The citybike Wien importer and aggregator"
authors = ["Sergey Chudov <chudov42@gmail.com>"]
license = "MIT"

packages = [
    {include = "src"}
]

readme = "README.md"
homepage = "https://github.com/WindowGenerator/citybike_wien_aggregation"
repository = "https://github.com/WindowGenerator/citybike_wien_aggregationr"
documentation = "https://github.com/WindowGenerator/citybike_wien_aggregation"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
pre-commit = "^2.19.0"
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"

[tool.isort]
line_length = 88
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
use_parentheses = true
not_skip = "__init__.py"
filter_files = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
